--- a/Views/User/product-detail.ejs
+++ b/Views/User/product-detail.ejs
@@ -22,6 +22,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
+            <!-- <script src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js" type="application/javascript"></script> -->
     </head>
 </head>
 
@@ -172,6 +173,6 @@
 
 </script>
 
-        <%-include('../partials/footer')-%>
+<%-include('../partials/footer')-%>
 
-            <%-include('../layout/footer')-%>
+<%-include('../layout/footer')-%>
