--- a/Public/css/otp.css
+++ b/Public/css/otp.css
@@ -23,6 +23,7 @@
         text-align: center;
         max-width: 400px;
         width: 100%;
+        border: 1px solid rgb(66, 63, 63);
     }
     
     h2 {
@@ -73,19 +74,24 @@
         margin-top: 25px;
     }
     /* Button styles */
-    button {
-        margin-top: 15px;
-        background-color: #007bff;
-        color: #fff;
+    .btn-custom{
+        display: block;
+        width: 70%;
+        height: 50px;
+        border-radius: 50px;
+        outline: none;
         border: none;
-        border-radius: 4px;
-        padding: 10px 20px;
-        font-size: 16px;
+        background-image: linear-gradient(to right, #444BEF, #7b7ee3, #444BEF);
+        background-size: 200%;
+        font-size: 1.2rem;
+        color: #fff;
+        font-family: 'Poppins', sans-serif;
+        text-transform: uppercase;
+        /* margin: 1rem 0; */
         cursor: pointer;
-        transition: background-color 0.3s;
+        transition:ease 1s;
     }
-    
-    button:hover {
-        background-color: #0056b3;
+    .btn-custom:hover{
+        background-position: right;
     }
     
