--- a/Views/User/product-detail.ejs
+++ b/Views/User/product-detail.ejs
@@ -22,7 +22,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
-            <!-- <script src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js" type="application/javascript"></script> -->
+            <script src="https://unpkg.com/js-image-zoom@0.4.1/js-image-zoom.js" type="application/javascript"></script>
     </head>
 </head>
 
@@ -34,11 +34,14 @@
                 <div class="row gx-5">
                     <aside class="col-lg-6">
                         <div class="border rounded-4 mb-3 d-flex justify-content-center" id="img-show">
-                            <a data-fslightbox="mygalley" class="rounded-4" target="_blank" data-type="image"
+                            <!-- <a data-fslightbox="mygalley" class="rounded-4" target="_blank" data-type="image"
                                 href="<%=data.images[0].mainimage?'/static/product-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>">
                                 <img  style="max-width: 100%; max-height: 70vh; margin: auto;" class="rounded-4 fit"
                                     src="<%=data.images[0].mainimage?'/static/product-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>" />
-                            </a>
+                            </a> -->
+                            <img  style="max-width: 100%; max-height: 70vh; margin: auto;" class="rounded-4 fit"
+                            src="<%=data.images[0].mainimage?'/static/product-images/'+data.images[0].mainimage:'/static/images/img-bg.jpg'%>" />
+
                         </div>
                         <div class="d-flex justify-content-center mb-3">
                             <a data-fslightbox="mygalley" class="border mx-1 rounded-2" target="_blank"
@@ -165,9 +168,9 @@
         </style>
 <script>
     var options = {
-        width: 280,
-        zoomWidth: 200,
-        offset: { vertical: 0, horizontal: 10 }
+        width: 400,
+        zoomWidth: 600,
+        offset: { vertical: 0, horizontal: 100 }
     };
     new ImageZoom(document.getElementById("img-show"), options);
 
